OLMIS-1642: Moved mark-up inline with button guidelines
- Made table buttons primary where appropriate
- Moved popover and modal close buttons to left
- Added special classes where needed to keep mark up simple

--- a/src/main/webapp/admin-template/template.html
+++ b/src/main/webapp/admin-template/template.html
@@ -73,6 +73,6 @@
     </div>
 </div>
 <div class="openlmis-toolbar">
-    <input type="button" id="saveButton" ng-click="vm.saveTemplate()" class="btn btn-primary" ng-disabled="!vm.template.$isValid()" value="{{'button.save' | message}}"/>
-    <input type="button" id="cancelButton" ng-click="vm.goToTemplateList()" class="btn btn-default" value="{{'button.cancel' | message}}">
+    <input type="button" ng-click="vm.saveTemplate()" class="primary" ng-disabled="!vm.template.$isValid()" value="{{'button.save' | message}}"/>
+    <input type="button" ng-click="vm.goToTemplateList()" value="{{'button.cancel' | message}}">
 </div>
