--- a/src/main/webapp/requisition-convert-to-order/convert-to-order.html
+++ b/src/main/webapp/requisition-convert-to-order/convert-to-order.html
@@ -72,6 +72,6 @@
 		</section>
 	</div>
 	<div class="openlmis-toolbar" ng-if="vm.requisitions.length">
-	    <input type="button" class="btn btn-primary primary-action" ng-click="vm.convertToOrder()" value="{{'link.requisitions.convertToOrder' | message}}">
+	    <button class="primary" ng-click="vm.convertToOrder()">{{'link.requisitions.convertToOrder' | message}}</button>
 	</div>
 </div>
