--- a/src/main/webapp/requisition-initiate/requisition-initiate.html
+++ b/src/main/webapp/requisition-initiate/requisition-initiate.html
@@ -82,7 +82,7 @@
                         <td>{{period.rnrStatus}}</td>
                         <td class="sticky">
                             <input id="proceedButton" type="button" ng-click="vm.initRnr(period)"
-                                   value="{{'button.proceed'| message}}" class="btn btn-primary grid-btn"
+                                   value="{{'button.proceed'| message}}" class="primary"
                                    ng-show="period.activeForRnr"/>
                         </td>
                     </tr>
