--- a/src/main/webapp/requisition-view/requisition-toolbar.html
+++ b/src/main/webapp/requisition-view/requisition-toolbar.html
@@ -2,11 +2,11 @@
 	<button ng-disabled="vm.isOffline()" ng-click="vm.syncRnr()">{{'button.sync' | message}}</button>
     <div class="button-group primary">
 	    <button ng-if="vm.displaySubmit()" class="primary" ng-disabled="vm.isOffline()" ng-click="vm.submitRnr()">{{'button.submit' | message}}</button>
-	    <button ng-if="vm.displayAuthorize()" class="primary" ng-disabled="vm.isOffline()" ng-click="vm.authorizeRnr()">{{'button.authorize' | message}}</button>
-	    <button ng-if="vm.displayApproveAndReject()" class="primary" ng-disabled="vm.isOffline()" ng-click="vm.rejectRnr()">{{'button.rnr.reject' | message}}</button>
+	    <button ng-if="vm.displayAuthorize()" class="primary" ng-disabled="vm.isOffline()" ng-click="vm.authorizeRnr()">{{'button.authorize' | message}}</button>	    
 	    <button ng-if="vm.displayApproveAndReject()" class="primary" ng-disabled="vm.isOffline()" ng-click="vm.approveRnr()">{{'button.approve' | message}}</button>
+	    <button ng-if="vm.displayApproveAndReject()" class="danger" ng-disabled="vm.isOffline()" ng-click="vm.rejectRnr()">{{'button.rnr.reject' | message}}</button>
 	    <button ng-if="vm.displayConvertToOrder()" class="primary" ng-disabled="vm.isOffline()" ng-click="vm.convertRnr()">{{'button.convert.to.order' | message}}</button>
-	    <button ng-if="vm.displayDelete()" class="delete" ng-disabled="vm.isOffline()" ng-click="vm.skipRnr()">{{'button.skip' | message}}</button>
-	    <button ng-if="vm.displaySkip()" ng-disabled="vm.isOffline()" ng-click="vm.removeRnr()">{{'button.delete' | message}}</button>
+	    <button ng-if="vm.displayDelete()" ng-disabled="vm.isOffline()" ng-click="vm.removeRnr()">{{'button.delete' | message}}</button>
+	    <button ng-if="vm.displaySkip()" class="delete" ng-disabled="vm.isOffline()" ng-click="vm.skipRnr()">{{'button.skip' | message}}</button>
     </div>
 </div>
