OLMIS-1640: Added "powered by" message

--- a/src/main/webapp/openlmis-reset-password/reset-password.html
+++ b/src/main/webapp/openlmis-reset-password/reset-password.html
@@ -33,6 +33,6 @@
         </form>
     </div>
     <div class="powered-by">
-        Powered by <a href="http://openlmis.org" target="_blank">OpenLMIS</a>
+        <a href="http://openlmis.org" target="_blank">{{'powered.by' | message:({openlmis:'OpenLMIS'})}}</a>
     </div>
 </div>
