--- a/src/main/webapp/openlmis-login/login-form.html
+++ b/src/main/webapp/openlmis-login/login-form.html
@@ -35,6 +35,6 @@
         </form>
     </div>
     <div class="powered-by">
-        Powered by <a href="http://openlmis.org" target="_blank">OpenLMIS</a>
+        <a href="http://openlmis.org" target="_blank">{{'powered.by' | message:({openlmis:'OpenLMIS'})}}</a>
     </div>
 </div>
