OLMIS-1647: Losses and Adjustments will now be disabled if line item is skipped
- fixed convert to order toolbar
- losses and adjustments modal will now be disable if line item is skipped
- updated tests

--- a/src/main/webapp/requisition-convert-to-order/convert-to-order.html
+++ b/src/main/webapp/requisition-convert-to-order/convert-to-order.html
@@ -71,7 +71,7 @@
 			</div>
 		</section>
 	</div>
-	<div class="openlmis-toolbar" ng-if="vm.requisitions.length">
+	<div class="openlmis-toolbar" ng-if="vm.pageItems.length">
 	    <button class="primary" ng-click="vm.convertToOrder()">{{'link.requisitions.convertToOrder' | message}}</button>
 	</div>
 </div>
