--- a/src/main/webapp/requisition-losses-and-adjustments/losses-and-adjustments-modal.html
+++ b/src/main/webapp/requisition-losses-and-adjustments/losses-and-adjustments-modal.html
@@ -1,6 +1,6 @@
 <div class="losses-and-adjustments-modal">
-    <label ng-if="!vm.disabled">{{'label.add.loss.adjustment' | message}}</label>
-    <form ng-if="!vm.disabled" class="form-filter" ng-submit="vm.addAdjustment()">
+    <label ng-if="!vm.isDisabled()">{{'label.add.loss.adjustment' | message}}</label>
+    <form ng-if="!vm.isDisabled()" class="form-filter" ng-submit="vm.addAdjustment()">
         <div class="form-group">
             <label for="reason">{{'label.equipment.maintenance.request.reason' | message}}</label>
             <select id="reason"
@@ -32,16 +32,16 @@
             {{vm.getReasonName(adjustment.reasonId)}}
         </dt>
         <dd ng-repeat-end>
-            <div ng-if="vm.disabled">{{adjustment.quantity}}</div>
+            <div ng-if="vm.isDisabled()">{{adjustment.quantity}}</div>
             <input id="adjustment-quantity-{{$index}}"
                 class="form-control"
                 ng-model="adjustment.quantity"
                 ng-change="vm.recalculateTotal()"
-                ng-if="!vm.disabled"
+                ng-if="!vm.isDisabled()"
                 required positive-integer />
             <input type="button" class="btn btn-danger"
                 ng-click="vm.removeAdjustment(adjustment)"
-                ng-if="!vm.disabled"
+                ng-if="!vm.isDisabled()"
                 value="{{'button.remove' | message}}">
         </dd>
         <dt>{{'label.losses.total' | message}}</dt>
