--- a/src/main/webapp/openlmis-locale/locale-list.html
+++ b/src/main/webapp/openlmis-locale/locale-list.html
@@ -1,6 +1,6 @@
 
 <ul class="locales">
-  <li ng-repeat="code in locale.locales">
+  <li ng-if="locale.locales.length > 1" ng-repeat="code in locale.locales">
     <a id="locale_{{code}}" ng-class="{'selected': locale.selectedLocale == code}" ng-click=locale.changeLocale(code)>
       {{'label.locale.' + code | message}}
     </a>
