OLMIS-1777: Moved page validation to the BasePaginationController
- moved the logic responsible for page validation to the
  BasePaginationController
- fixed validation of the View POD screen
- fixed convert to order screen when no requisition is convertable

--- a/src/main/webapp/openlmis-pagination/openlmis-pagination.html
+++ b/src/main/webapp/openlmis-pagination/openlmis-pagination.html
@@ -1,4 +1,4 @@
-<div class="openlmis-pagination">
+<div class="openlmis-pagination" ng-if="vm.totalPages">
 	<div class="pagination-info">
 		{{'msg.showing' | message}} {{vm.items}} {{'msg.lineItems' | message}} {{'msg.outOf' | message}} {{vm.totalItems}} {{'msg.total' | message}}
 	</div>
