--- a/src/main/webapp/proof-of-delivery-view/proof-of-delivery-view.html
+++ b/src/main/webapp/proof-of-delivery-view/proof-of-delivery-view.html
@@ -47,7 +47,7 @@
                 total-items="vm.totalItems"
                 items="vm.pageItems.length"
                 page-size="vm.stateParams.size"
-                page-validator="vm.pod.isLineItemValid">
+                page-validator="vm.isPageValid">
             </openlmis-pagination>
         </div>
     </div>
