--- a/src/main/webapp/requisition-convert-to-order/convert-to-order.html
+++ b/src/main/webapp/requisition-convert-to-order/convert-to-order.html
@@ -2,7 +2,7 @@
 	<div class="page">
 		<h2>{{'label.requisition.convertOrder' | message}}</h2>
 		<section class="openlmis-table-container">
-			<form class="openlmis-table-filters" ng-submit="vm.reload()" ng-if="!vm.nothingToConvert">
+			<form class="openlmis-table-filters" ng-submit="vm.changePage()" ng-if="!vm.nothingToConvert">
 				<label for="searchFor">{{'search.for' | message}}</label>
 				<input id="searchFor" class="filter-value" ng-model="vm.stateParams.filterValue"
 					   maxlength="50"/>
