OLMIS-1777: Restored hidden pagination

--- a/src/main/webapp/requisition-non-full-supply/non-full-supply.html
+++ b/src/main/webapp/requisition-non-full-supply/non-full-supply.html
@@ -25,7 +25,7 @@
 				</tr>
 			</tbody>
 		</table>
-		<openlmis-pagination ng-if="vm.pageItems.length" ng-model="vm.stateParams.page"
+		<openlmis-pagination ng-model="vm.stateParams.page"
 			ng-change="vm.changePage(vm.page)"
 			total-items="vm.getTotalItems()"
 			items="vm.pageItems.length"
