--- a/src/main/webapp/requisition-convert-to-order/convert-to-order.html
+++ b/src/main/webapp/requisition-convert-to-order/convert-to-order.html
@@ -1,8 +1,8 @@
 <div class="convert-to-order-list">
 	<div class="page">
 		<h2>{{'label.requisition.convertOrder' | message}}</h2>
-		<section class="openlmis-table-container">
-			<form class="openlmis-table-filters" ng-submit="vm.changePage()" ng-if="!vm.nothingToConvert">
+		<section class="openlmis-table-container" ng-if="!vm.nothingToConvert">
+			<form class="openlmis-table-filters" ng-submit="vm.changePage()">
 				<label for="searchFor">{{'search.for' | message}}</label>
 				<input id="searchFor" class="filter-value" ng-model="vm.stateParams.filterValue"
 					   maxlength="50"/>
@@ -18,7 +18,7 @@
 			<div class="openlmis-table">
 				<table>
 					<caption ng-if="vm.infoMessage">{{vm.infoMessage | message}}</caption>
-					<thead ng-if="vm.pageItems.length">
+					<thead>
 						<tr>
 							<th>
 								<input type="checkbox" ng-model="vm.selectAll"
