OLMIS-1566 FEOLMIS-1116: Moved searching logic to factory
Organized controller to look more readable.
Moved getting home facility to factory.
Updated tests.

--- a/src/main/webapp/proof-of-delivery-manage/proof-of-delivery-manage.html
+++ b/src/main/webapp/proof-of-delivery-manage/proof-of-delivery-manage.html
@@ -42,7 +42,7 @@
             </fieldset>
             <fieldset ng-show="vm.isSupervised">
                 <label for="supervisedFacilityName">
-                    {{'label.requisition.facilityName' | message}}
+                    {{'label.requestingFacility' | message}}
                 </label>
                 <select id="supervisedFacilityName" ng-model="vm.requestingFacilityId"
                         ng-options="facility.id as facility.name for facility in vm.requestingFacilities | unique:'id'"
