OLMIS-1585: Integrated OPENLMIS_LANGUAGES dictonary
- integrated with localeController
- hid element if langugae list is one or less

--- a/src/main/webapp/openlmis-locale/locale-list.html
+++ b/src/main/webapp/openlmis-locale/locale-list.html
@@ -1,8 +1,8 @@
 
-<ul class="locales">
-  <li ng-if="locale.locales.length > 1" ng-repeat="code in locale.locales">
-    <a id="locale_{{code}}" ng-class="{'selected': locale.selectedLocale == code}" ng-click=locale.changeLocale(code)>
-      {{'label.locale.' + code | message}}
+<ul ng-if="vm.locales.length > 1" class="locales">
+  <li ng-repeat="code in vm.locales">
+    <a ng-class="{'selected': vm.selectedLocale == code}" ng-click=vm.changeLocale(code)>
+      {{vm.getLocaleName(code)}}
     </a>
   </li>
 </ul>
