OLMIS-1371: Slight improvements to the Convert to Order table
- replaced padding with margin to fix incorrect offset of the pagination
  div
- pagination controls will now hide if there are no items to be shown
- convert to order table will now show headers, filters and caption if
  there are no requisitions to be shown

--- a/src/main/webapp/requisition-convert-to-order/convert-to-order.html
+++ b/src/main/webapp/requisition-convert-to-order/convert-to-order.html
@@ -1,7 +1,7 @@
 <div class="convert-to-order-list">
 	<div class="page">
 		<h2>{{'label.requisition.convertOrder' | message}}</h2>
-		<section class="openlmis-table-container" ng-if="!vm.nothingToConvert">
+		<section class="openlmis-table-container">
 			<form class="openlmis-table-filters" ng-submit="vm.changePage()">
 				<label for="searchFor">{{'search.for' | message}}</label>
 				<input id="searchFor" class="filter-value" ng-model="vm.stateParams.filterValue"
