--- a/src/main/webapp/proof-of-delivery-manage/proof-of-delivery-manage.html
+++ b/src/main/webapp/proof-of-delivery-manage/proof-of-delivery-manage.html
@@ -1,10 +1,13 @@
 <div class="page">
     <h2>{{'header.managePod' | message}}</h2>
-    <div ng-if="vm.error" class="alert is-info" ng-show="vm.error">
-        {{vm.error | message}}
+    <div ng-if="orderForm.$invalid && orderForm.$submitted && !vm.requestingFacilities.length && vm.selectedProgram" class="alert is-info">
+        {{'msg.no.facility.available' | message}}
+    </div>
+    <div ng-if="orderForm.$invalid && orderForm.$submitted && !vm.programs.length" class="alert is-info">
+        {{'msg.no.program.available' | message}}
     </div>
     <section class="openlmis-table-container">
-        <form class="openlmis-table-filters" ng-submit="vm.loadOrders()">
+        <form name="orderForm" class="openlmis-table-filters" ng-submit="vm.loadOrders()">
             <fieldset>
                 <label>
                     <input type="radio" ng-model="vm.isSupervised" ng-value="false"
@@ -49,7 +52,7 @@
                         placeholder="{{'label.select.facility' | message}}" required>
                 </select>
             </fieldset>
-            <input class="btn btn-primary" type="submit" value="{{'button.search'|message}}"/>
+            <input class="primary" type="submit" value="{{'button.search'|message}}"/>
         </form>
         <table class="openlmis-table" ng-if="vm.orders">
             <caption ng-if="!vm.orders.length">{{'msg.noPodsFound' | message}}</caption>
