--- a/src/main/webapp/proof-of-delivery-manage/proof-of-delivery-manage.html
+++ b/src/main/webapp/proof-of-delivery-manage/proof-of-delivery-manage.html
@@ -1,6 +1,6 @@
 <div class="page">
     <h2>{{'header.managePod' | message}}</h2>
-    <div ng-if="orderForm.$invalid && orderForm.$submitted && !vm.requestingFacilities.length && vm.selectedProgram" class="alert is-info">
+    <div ng-if="orderForm.$invalid && orderForm.$submitted && !vm.requestingFacilities.length && vm.selectedProgramId" class="alert is-info">
         {{'msg.no.facility.available' | message}}
     </div>
     <div ng-if="orderForm.$invalid && orderForm.$submitted && !vm.programs.length" class="alert is-info">
@@ -52,7 +52,7 @@
                         placeholder="{{'label.select.facility' | message}}" required>
                 </select>
             </fieldset>
-            <input class="primary" type="submit" value="{{'button.search'|message}}"/>
+            <input type="submit" value="{{'button.search'|message}}"/>
         </form>
         <table class="openlmis-table" ng-if="vm.orders">
             <caption ng-if="!vm.orders.length">{{'msg.noPodsFound' | message}}</caption>
@@ -80,7 +80,7 @@
                         <i ng-class="{'icon-ok': order.emergency}"></i>
                     </td>
                     <td>
-                        <i class="btn btn-primary" ng-click="vm.openPod(order.id)">{{'button.viewOrder' | message}}</i>
+                        <button class="primary" ng-click="vm.openPod(order.id)">{{'button.viewOrder' | message}}</button>
                     </td>
                 </tr>
             </tbody>
