OLMIS-1566: Improved data formatting one the Manage Pod screen

--- a/src/main/webapp/proof-of-delivery-manage/proof-of-delivery-manage.html
+++ b/src/main/webapp/proof-of-delivery-manage/proof-of-delivery-manage.html
@@ -75,7 +75,7 @@
                     <td>{{order.facility.code}} - {{order.facility.name}}</td>
                     <td>{{order.program.name}}</td>
                     <td>{{order.processingPeriod.name}} ({{order.processingPeriod | period}})</td>
-                    <td>{{order.createdDate.toLocaleString()}}</td>
+                    <td>{{order.createdDate | date: 'dd/MM/yyyy HH:mm:ss'}}</td>
                     <td class="col-emergency">
                         <i ng-class="{'icon-ok': order.emergency}"></i>
                     </td>
