Changed Order date/time format on the View POD screen to follow our standard

--- a/src/main/webapp/proof-of-delivery-view/header.html
+++ b/src/main/webapp/proof-of-delivery-view/header.html
@@ -10,7 +10,7 @@
         <dt>{{'label.facility' | message}}</dt>
         <dd>{{vm.pod.order.facility.code}} - {{vm.pod.order.facility.name}}</dd>
         <dt>{{'label.orderDate' | message}}</dt>
-        <dd>{{vm.pod.order.createdDate.toLocaleString()}}</dd>
+        <dd>{{vm.pod.order.createdDate | date: 'dd/MM/yyyy HH:mm:ss'}}</dd>
         <dt>{{'label.reportingPeriod' | message}}</dt>
         <dd>{{vm.pod.order.processingPeriod | period}}</dd>
         <dt>{{'label.supplyingDepot' | message}}</dt>
