--- a/src/main/webapp/requisition-approval/requisition-approval-list.html
+++ b/src/main/webapp/requisition-approval/requisition-approval-list.html
@@ -3,7 +3,7 @@
     <div class="openlmis-table-container">
         <form class="openlmis-table-controls form-inline">
             <label for="table-sort-order">{{'label.sortItemsBy' | message}}</label>
-            <select id="table-sort-order" ng-model="vm.selectedColumn"
+            <select required id="table-sort-order" ng-model="vm.selectedColumn"
                 ng-options="column.name as column.label for column in vm.columns">
             </select>
             <button ng-class="{descending: vm.reverse, ascending: !vm.reverse}" ng-click="vm.changeSortOrder()"></button>
