OLMIS-1642: Made remove comment button look right

--- a/src/main/webapp/requisition-status-messages/status-messages.html
+++ b/src/main/webapp/requisition-status-messages/status-messages.html
@@ -14,7 +14,7 @@
         <textarea ng-model="vm.requisition.draftStatusMessage" ng-hide="vm.displayAddComment()"></textarea>
         <input type="button" class="primary" value="{{'button.addComment' | message}}"
                ng-click="vm.addComment()" ng-show="vm.displayAddComment()"/>
-        <input type="button" class="delete" value="{{'button.removeComment' | message}}"
+        <input type="button" class="danger" value="{{'button.removeComment' | message}}"
                ng-click="vm.removeComment()" ng-hide="vm.displayAddComment()"/>
     </form>
 </div>
