--- a/src/main/webapp/requisition-initiate/requisition-initiate.html
+++ b/src/main/webapp/requisition-initiate/requisition-initiate.html
@@ -2,7 +2,7 @@
     <h2>{{'label.initiate.requisition' | message}}</h2>
     <section class="openlmis-table-container">
         <form class="openlmis-table-filters" ng-submit="vm.loadPeriods()">
-            <fieldset>
+            <fieldset class="form-group">
                 <legend>{{'label.requisition.facilityType' | message}}</legend>
                 <label>
                     <input type="radio" ng-model="vm.isSupervised" ng-value="false"
@@ -22,8 +22,6 @@
                         ng-options="facility.id as facility.name for facility in vm.facilities"
                         placeholder="label.select.facility" required>
                 </select>
-            </fieldset>
-            <fieldset ng-show="!vm.isSupervised">
                 <label for="programListMyFacility">{{'label.program' | message}}</label>
                 <select id="programListMyFacility" ng-model="vm.selectedProgramId"
                         ng-options="program.id as program.name for program in vm.programs"
@@ -37,8 +35,6 @@
                         ng-change="vm.loadFacilitiesForProgram(vm.selectedProgramId)"
                         placeholder="{{'label.select.program' | message}}" required>
                 </select>
-            </fieldset>
-            <fieldset ng-show="vm.isSupervised">
                 <label for="supervisedFacilityName">
                     {{'label.requisition.facilityName' | message}}
                 </label>
@@ -47,7 +43,7 @@
                         placeholder="{{'label.select.facility' | message}}" required>
                 </select>
             </fieldset>
-            <fieldset>
+            <fieldset class="form-group">
                 <legend>{{'label.requisition.type' | message}}</legend>
                 <label>
                     <input type="radio" ng-model="vm.emergency" ng-value="false"/>
