--- a/src/main/webapp/requisition-losses-and-adjustments/losses-and-adjustments-modal.html
+++ b/src/main/webapp/requisition-losses-and-adjustments/losses-and-adjustments-modal.html
@@ -1,25 +1,27 @@
 <div class="losses-and-adjustments-modal">
-    <label ng-if="!vm.isDisabled()">{{'label.add.loss.adjustment' | message}}</label>
-    <form ng-if="!vm.isDisabled()" class="form-filter" ng-submit="vm.addAdjustment()">
-        <div class="form-group">
-            <label for="reason">{{'label.equipment.maintenance.request.reason' | message}}</label>
-            <select id="reason"
-             ng-model="vm.adjustment.reason"
-             ng-options="reason as reason.name for reason in vm.reasons"
-             ></select>
-        </div>
-        <div class="form-group">
-            <label for="quantity">{{'label.quantity' | message}}</label>
-            <input id="quantity"
-                   class="form-control"
-                   ng-model="vm.adjustment.quantity"
-                   required positive-integer/>
-        </div>
-        <div class="form-group">
-            <button class="btn btn-primary" type="submit">
-                {{'button.add' | message}}
-            </button>
-        </div>
+    <form ng-if="!vm.isDisabled()" ng-submit="vm.addAdjustment()">
+        <fieldset>
+            <legend >{{'label.add.loss.adjustment' | message}}</legend>
+            <div class="form-inline">
+                <div class="form-group">
+                    <label for="reason">{{'label.equipment.maintenance.request.reason' | message}}</label>
+                    <select id="reason"
+                     ng-model="vm.adjustment.reason"
+                     ng-options="reason as reason.name for reason in vm.reasons"
+                     ></select>
+                </div>
+                <div class="form-group">
+                    <label for="quantity">{{'label.quantity' | message}}</label>
+                    <input id="quantity"
+                           class="form-control"
+                           ng-model="vm.adjustment.quantity"
+                           required positive-integer/>
+                </div>
+                <button class="btn btn-primary" type="submit">
+                    {{'button.add' | message}}
+                </button>
+            </div>
+        </fieldset>
     </form>
 
     <div class="adjustment-warning alert is-info"
@@ -39,7 +41,7 @@
                 ng-change="vm.recalculateTotal()"
                 ng-if="!vm.isDisabled()"
                 required positive-integer />
-            <input type="button" class="btn btn-danger"
+            <input type="button" class="danger"
                 ng-click="vm.removeAdjustment(adjustment)"
                 ng-if="!vm.isDisabled()"
                 value="{{'button.remove' | message}}">
