OLMIS-1841: Updated openlmis-locale to use locale instead of vm
vm is used by ForgotPasswordController and if locale used it too, forgot password modal does not find proper controller

--- a/src/main/webapp/openlmis-locale/locale-list.html
+++ b/src/main/webapp/openlmis-locale/locale-list.html
@@ -1,8 +1,8 @@
 
-<ul ng-if="vm.locales.length > 1" class="locales">
-  <li ng-repeat="code in vm.locales">
-    <a ng-class="{'selected': vm.selectedLocale == code}" ng-click=vm.changeLocale(code)>
-      {{vm.getLocaleName(code)}}
+<ul ng-if="locale.locales.length > 1" class="locales">
+  <li ng-repeat="code in locale.locales">
+    <a ng-class="{'selected': locale.selectedLocale == code}" ng-click=locale.changeLocale(code)>
+      {{locale.getLocaleName(code)}}
     </a>
   </li>
 </ul>
