OLMIS-1841: Updated buttons style in forgot password modal

--- a/src/main/webapp/openlmis-forgot-password/forgot-password.html
+++ b/src/main/webapp/openlmis-forgot-password/forgot-password.html
@@ -15,14 +15,14 @@
     <div class="login-form">
         <h2>{{'forgot.password.email.subject' | message}}</h2>
         <div class="form-desc">{{'reset.password.message' | message}}</div>
-        <form class="forgot-password">
+        <form>
             <fieldset>
-                <div class="login-form-row">
+                <div>
                     <label for="email">{{'placeholder.email' | message}}</label>
                     <input type="text" id="email" ng-model="vm.email" required autofocus/>
                 </div>
                 <div class="alert is-error" ng-if="vm.error">{{vm.error | message}}</div>
-                <div class="login-form-row">
+                <div class="button-group">
                     <button class="primary" ng-click="vm.forgotPassword()" ng-disabled="!vm.email">{{'button.submit' | message}}</button>
                     <button ng-click="vm.redirectToLogin()">{{'button.cancel' | message}}</button>
                 </div>
