OLMIS-1691: Tweaks to markup and styles to fit forms

--- a/src/main/webapp/openlmis-reset-password/reset-password.html
+++ b/src/main/webapp/openlmis-reset-password/reset-password.html
@@ -13,23 +13,19 @@
         <openlmis-locale class="locale-container"/>
     </div>
     <div class="login-form">
-        <form>
+        <form ng-submit="vm.changePassword()">
+            <div id="error" class="alert is-error" ng-if="vm.error">{{vm.error | message}}</div>
             <h2>{{'button.reset.password' | message}}</h2>
-            <div class="form-desc">{{'reset.password.requirements' | message}}</div>
-            <fieldset>
-                <div class="login-form-row">
-                    <label for="password">{{'placeholder.new.password' | message}}</label>
-                    <input ng-model="vm.password" type="password" id="password" required autofocus/>
-                </div>
-                <div class="login-form-row">
-                    <label for="reenteredPassword">{{'placeholder.reenter.password' | message}}</label>
-                    <input ng-model="vm.reenteredPassword" type="password" id="reenteredPassword" required/>
-                </div>
-                <div id="error" class="alert is-error" ng-if="vm.error">{{vm.error | message}}</div>
-                <div class="login-form-row">
-                    <button class="btn btn-primary" ng-click="vm.changePassword()" ng-disabled="!vm.password || !vm.reenteredPassword">{{'label.change.password' | message}}</button>
-                </div>
-            </fieldset>
+            <p>{{'reset.password.requirements' | message}}</p>
+            <div class="form-group">
+                <label for="password">{{'placeholder.new.password' | message}}</label>
+                <input ng-model="vm.password" type="password" id="password" required />
+            </div>
+            <div class="form-group">
+                <label for="reenteredPassword">{{'placeholder.reenter.password' | message}}</label>
+                <input ng-model="vm.reenteredPassword" type="password" id="reenteredPassword" required/>
+            </div>
+            <input type="submit" value="{{'label.change.password' | message}}" />
         </form>
     </div>
     <div class="powered-by">
