--- a/src/main/webapp/requisition-non-full-supply/add-product-modal.html
+++ b/src/main/webapp/requisition-non-full-supply/add-product-modal.html
@@ -23,7 +23,7 @@
 	</div>
 	<div class="form-group">
 		<label for="requestedQuantity">{{'placeholder.explanation' | message}}</label>
-		<input class="form-control"
+		<input type="text"
 			ng-model="vm.requestedQuantityExplanation"
 			ng-required="vm.requestedQuantity">
 	</div>
