--- a/src/main/webapp/openlmis-forgot-password/forgot-password.html
+++ b/src/main/webapp/openlmis-forgot-password/forgot-password.html
@@ -16,17 +16,13 @@
         <h2>{{'forgot.password.email.subject' | message}}</h2>
         <div class="form-desc">{{'reset.password.message' | message}}</div>
         <form>
-            <fieldset>
-                <div class="login-form-row">
-                    <label for="email">{{'placeholder.email' | message}}</label>
-                    <input type="text" id="email" ng-model="vm.email" required autofocus/>
-                </div>
-                <div class="alert is-error" id="errorMessage" ng-if="vm.error">{{vm.error | message}}</div>
-                <div class="login-form-row">
-                    <button id="submitPasswordButton" class="btn btn-primary" ng-click="vm.forgotPassword()" ng-disabled="!vm.email">{{'button.submit' | message}}</button>
-                    <button id="cancelPasswordButton" class="btn btn-cancel" ng-click="vm.redirectToLogin()">{{'button.cancel' | message}}</button>
-                </div>
-            </fieldset>
+            <div class="alert is-error" id="errorMessage" ng-if="vm.error">{{vm.error | message}}</div>
+            <label for="email">{{'placeholder.email' | message}}</label>
+            <input type="text" id="email" ng-model="vm.email" required />
+            <div class="button-group">
+                <button id="submitPasswordButton" class="primary" ng-click="vm.forgotPassword()" >{{'button.submit' | message}}</button>
+                <button id="cancelPasswordButton" ng-click="vm.redirectToLogin()">{{'button.cancel' | message}}</button>
+            </div>
         </form>
     </div>
     <div class="powered-by">
