--- a/src/main/webapp/openlmis-login/login-form.html
+++ b/src/main/webapp/openlmis-login/login-form.html
@@ -17,16 +17,16 @@
         <h2 id="signInLabel">{{'label.sign.in' | message}}</h2>
 
         <form ng-controller="LoginController as vm">
+            <div id="loginError" class="alert is-error" ng-if="vm.loginError">{{vm.loginError | message}}</div>
             <fieldset>
-                <div class="login-form-row">
+                <div class="form-group">
                     <label for="login-username">{{'label.username' | message}}</label>
                     <input ng-model="vm.username" type="text" id="login-username" required autofocus/>
                 </div>
-                <div class="login-form-row">
+                <div class="form-group">
                     <label for="login-password">{{'label.password' | message}}</label>
                     <input ng-model="vm.password" type="password" id="login-password" required/>
                 </div>
-                <div id="loginError" class="alert is-error" ng-if="vm.loginError">{{vm.loginError | message}}</div>
                 <div class="button-group">
                     <button class="primary" ng-click="vm.doLogin()" ng-disabled="vm.disableSignInButton">{{'button.sign.in' | message}}</button>
                     <a id="forgotPasswordLink" ng-click="vm.goToForgotPassword()">{{'link.forgot.password' | message}}</a>
