--- a/src/main/webapp/requisition-status-messages/status-messages.html
+++ b/src/main/webapp/requisition-status-messages/status-messages.html
@@ -10,7 +10,7 @@
             <dd>{{vm.requisition.$statusMessages[0].body}}</dd>
         </dl>
     </aside>
-    <form>
+    <form class="form-inline">
         <textarea ng-model="vm.requisition.draftStatusMessage" ng-hide="vm.displayAddComment()"></textarea>
         <input type="button" class="primary" value="{{'button.addComment' | message}}"
                ng-click="vm.addComment()" ng-show="vm.displayAddComment()"/>
