OLMIS-1448: Minor tweaks to popover
- Updated form styles
- Changed message string to use interopolation
- Made modal close once selection was chosen (because it felt better)`

--- a/src/main/webapp/openlmis-form/select-search-option.html
+++ b/src/main/webapp/openlmis-form/select-search-option.html
@@ -1,13 +1,12 @@
 <form class="select-search-option">
     <label for="search">{{'label.search' | message}}</label>
     <input id="search" type="text" ng-model="searchText" ng-change="findSelectedOption(options, selected)"/>
-    <div class="list-label">
-        <div>{{'msg.selectAnOption' | message}}</div>
-        <div>({{'msg.showing' | message}} {{results.length}} {{'msg.outOf' | message}} {{options.length}})</div>
-    </div>
-    <fieldset class="option-list">
-        <label ng-repeat="option in options | filter: {label: searchText} as results">
-            <input type="radio" name="select" ng-click="select(option)" ng-model="selected" ng-value="option">{{option.label}}</input>
+    <fieldset class="form-group">
+        <legend>{{'msg.selectAnOption' | message}}</legend>
+        <p>{{'msg.showingNumOfResults' | message: {'num': results.length || options.length, 'total': options.length} }}</p>
+        <label class="radio" ng-repeat="option in options | filter: {label: searchText} as results">
+            <input type="radio" ng-click="select(option)" name="selected" ng-model="selected" ng-value="option" />
+            {{option.label}}
         </label>
     </fieldset>
 </form>
