OLMIS-1771: Changed languages to a dropdown

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,7 +23,7 @@
       <div ng-include="'openlmis-header/header.html'" offline ng-class="{'isOffline':isOffline}" ></div>
       <div class="navbar">
         <openlmis-navigation class="nav navbar-nav"></openlmis-navigation>
-        <openlmis-locale class="navbar-links navbar-right"></openlmis-locale>
+        <openlmis-locale class="navbar-right locale-container"></openlmis-locale>
       </div>
     </header>
     <div ui-view></div>
