--- a/src/main/webapp/openlmis-locale/locale-list.html
+++ b/src/main/webapp/openlmis-locale/locale-list.html
@@ -1,8 +1,6 @@
-
-<ul ng-if="locale.locales.length > 1" class="locales">
-  <li ng-repeat="code in locale.locales">
-    <a ng-class="{'selected': locale.selectedLocale == code}" ng-click=locale.changeLocale(code)>
-      {{locale.getLocaleName(code)}}
-    </a>
-  </li>
-</ul>
+<select required ng-if="locale.locales.length > 1" ng-model="locale.selectedLocale"
+        ng-change="locale.changeLocale(locale.selectedLocale)">
+  <option ng-repeat="code in locale.locales" value="{{code}}" ng-selected="locale.selectedLocale === code">
+    {{locale.getLocaleName(code) | message}}
+  </option>
+</select>
