--- a/src/main/webapp/requisition-non-full-supply/non-full-supply.html
+++ b/src/main/webapp/requisition-non-full-supply/non-full-supply.html
@@ -14,7 +14,7 @@
 				</tr>
 			</thead>
 			<tbody ng-repeat="(category, lineItems) in vm.pageItems | groupBy:'$program.orderableCategoryDisplayName'" title="{{category}}">
-				<tr ng-class="{'invalid-row': !vm.isLineItemValid(lineItem)}" ng-repeat="lineItem in lineItems | orderBy : 'displayOrder'">
+				<tr ng-class="{'invalid-row': !vm.isLineItemValid(lineItem)}" ng-repeat="lineItem in lineItems | orderBy : '$program.displayOrder'">
 					<td ng-repeat="column in vm.columns | orderBy : 'displayOrder'"
 						product-grid-cell requisition="vm.requisition" column="column" line-item="lineItem"></td>
 					<td ng-if="vm.displayDeleteColumn()">
